--- a/server-api/manifest.yml
+++ b/server-api/manifest.yml
@@ -3,4 +3,5 @@ applications:
 - name: adub-nodejsapi
   memory: 512M
   instances: 1
-  random-route: true
+  routes:
+  - route: adub-nodejsapi-fluent-puku.apps.pcf.sandbox.cudirect.com
